--- a/trello-web/build.gradle
+++ b/trello-web/build.gradle
@@ -16,3 +16,14 @@ dependencies {
     implementation 'com.applitools:eyes-selenium-java3:3.151.2'
     implementation 'org.testng:testng:6.14.3'
 }
+
+test {
+    useTestNG {
+        suites 'src/test/resources/testng.xml'
+    }
+
+    if (project.hasProperty('browser')) {
+        systemProperty'browser', "${browser}"
+
+    }
+}
